# snips_nlu

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: snips_nlu.ex
lib/snips_nlu/: native.ex
native/snips_nlu_native/: Cargo.toml  README.md
native/snips_nlu_native/src/: lib.rs
test/: snips_nlu_test.exs
test/snips_nlu/: native_test.exs
