[package]
name = "snips_nlu_native"
version = "0.1.0"
authors = []

[lib]
name = "snips_nlu_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
failure = "0.1.2"
rustler = "0.18.0"
rustler_codegen = "0.18.0"
lazy_static = "1.0"
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
